# Eight-Minute-Legends

./: .gitignore  README.md
src/: CMakeLists.txt  MainDriver.cpp  MainDriver.h  build.sh  main.cpp  mainDriver.cpp
src/BiddingFacility/: BiddingFacility.cpp  BiddingFacility.h  BiddingFacilityDriver.cpp
src/Cards/: Cards.cpp  Cards.h  CardsDriver.cpp  README.md  cards.json
src/Files/: cards.json  cards.txt  invalidMap.txt  invalidSyntaxMap.txt  validMap.txt  validMap2.txt
src/Map/: Map.cpp  Map.h  MapDriver.cpp  main.cpp
src/MapLoader/: MapLoader.cpp  MapLoader.h  MapLoaderDriver.cpp
src/Player/: Player.cpp  Player.h  PlayerDriver.cpp  PlayerStrategy.cpp  PlayerStrategy.h
src/Setup/: GameObservers.cpp  GameObservers.h  Setup.cpp  Setup.h  SetupDriver.cpp
src/Utils/: Utils.cpp  Utils.h
